View CSS tweaks

--- a/data/styles/view.css
+++ b/data/styles/view.css
@@ -48,6 +48,10 @@ ul#page-actions, .page-actions-menu {
   display: none !important;
 }
 
+.pre-content .minerva__tab-container {
+  display: none !important;
+}
+
 /* Post content */
 
 .post-content .language-selector {
