--- a/data/ui/header.ui
+++ b/data/ui/header.ui
@@ -6,6 +6,9 @@
 		<property name="title-widget">
 			<object class="GtkLabel" id="window_title">
 				<property name="label" translatable="no">Wike</property>
+				<style>
+        	<class name="title"/>
+      	</style>
 			</object>
 		</property>
     <child>
@@ -13,93 +16,55 @@
         <child>
           <object class="GtkButton" id="prev_button">
             <property name="action_name">win.prev_page</property>
-            <child>
-              <object class="GtkImage">
-                <property name="icon_name">go-previous-symbolic</property>
-              </object>
-            </child>
+            <property name="icon_name">go-previous-symbolic</property>
           </object>
         </child>
         <child>
           <object class="GtkButton" id="next_button">
             <property name="action_name">win.next_page</property>
-            <child>
-              <object class="GtkImage">
-                <property name="icon_name">go-next-symbolic</property>
-              </object>
-            </child>
+            <property name="icon_name">go-next-symbolic</property>
           </object>
         </child>
-        <style>
-          <class name="linked"/>
-        </style>
-      </object>
-    </child>
-    <child>
-      <object class="GtkButton" id="tab_button">
-        <property name="tooltip-text" translatable="yes">New tab</property>
-        <property name="action_name">win.new_tab</property>
         <child>
-          <object class="GtkImage">
+          <object class="GtkButton" id="tab_button">
+            <property name="tooltip-text" translatable="yes">New tab</property>
+            <property name="action_name">win.new_tab</property>
             <property name="icon_name">tab-new-symbolic</property>
           </object>
         </child>
-      </object>
-    </child>
-    <child>
-      <object class="GtkToggleButton" id="search_button">
-        <property name="tooltip-text" translatable="yes">Search articles</property>
         <child>
-          <object class="GtkImage">
+          <object class="GtkToggleButton" id="search_button">
+            <property name="tooltip-text" translatable="yes">Search articles</property>
             <property name="icon_name">edit-find-symbolic</property>
           </object>
         </child>
       </object>
     </child>
-    <child>
-      <object class="GtkMenuButton" id="menu_button">
-        <child>
-          <object class="GtkImage">
-            <property name="icon_name">open-menu-symbolic</property>
-          </object>
-        </child>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuButton" id="bookmarks_button">
-        <property name="tooltip-text" translatable="yes">Bookmarks</property>
-        <child>
-          <object class="GtkImage">
-            <property name="icon_name">user-bookmarks-symbolic</property>
-          </object>
-        </child>
-      </object>
-    </child>
-    <child>
+    <child type="end">
       <object class="GtkBox">
         <child>
           <object class="GtkMenuButton" id="toc_button">
             <property name="tooltip-text" translatable="yes">Table of contents</property>
-            <child>
-              <object class="GtkImage">
-                <property name="icon_name">view-list-symbolic</property>
-              </object>
-            </child>
+            <property name="icon_name">view-list-symbolic</property>
           </object>
         </child>
         <child>
           <object class="GtkMenuButton" id="langlinks_button">
             <property name="tooltip-text" translatable="yes">View article in other languages</property>
-            <child>
-              <object class="GtkImage">
-                <property name="icon_name">wike-language-symbolic</property>
-              </object>
-            </child>
+            <property name="icon_name">wike-language-symbolic</property>
           </object>
         </child>
-        <style>
-          <class name="linked"/>
-        </style>
+        <child>
+          <object class="GtkMenuButton" id="bookmarks_button">
+            <property name="tooltip-text" translatable="yes">Bookmarks</property>
+            <property name="icon_name">user-bookmarks-symbolic</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkMenuButton" id="menu_button">
+            <property name="icon_name">open-menu-symbolic</property>
+          </object>
+        </child>
       </object>
     </child>
   </template>
