--- a/data/ui/shortcuts.ui
+++ b/data/ui/shortcuts.ui
@@ -7,7 +7,6 @@
       <object class="GtkShortcutsSection">
         <property name="visible">True</property>
         <property name="section-name">shortcuts</property>
-        <property name="max-height">12</property>
         <child>
           <object class="GtkShortcutsGroup">
             <property name="visible">True</property>
@@ -140,6 +139,13 @@
                 <property name="visible">True</property>
                 <property name="title" translatable="yes" context="shortcut window">Wikipedia main page</property>
                 <property name="accelerator">&lt;Alt&gt;Home</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="visible">True</property>
+                <property name="title" translatable="yes" context="shortcut window">Random article</property>
+                <property name="accelerator">&lt;Alt&gt;R</property>
               </object>
             </child>
             <child>
