application: Remove excessive show-help-overlay action
We don't need an extra action to show help-overlay.

It already managed by GTK.

Source: https://docs.gtk.org/gtk4/class.Application.html#automatic-resources

--- a/data/ui/menu.ui
+++ b/data/ui/menu.ui
@@ -234,7 +234,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="text" translatable="yes">Keyboard Shortcuts</property>
-            <property name="action_name">app.shortcuts</property>
+            <property name="action_name">win.show-help-overlay</property>
           </object>
           <packing>
             <property name="expand">False</property>
