--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -73,8 +73,14 @@ SPDX-License-Identifier: GPL-3.0-or-later
             </child>
             <child>
               <object class="AdwActionRow">
-                <property name="title" translatable="yes">Clear Personal Data</property>
-                <property name="subtitle" translatable="yes">Cookies and cache data will be deleted</property>
+                <property name="title" translatable="yes">Clear Personal Data on Close</property>
+                <property name="subtitle" translatable="yes">Cookies and cache data will be deleted when you exit Wike</property>
+                <property name="activatable-widget">data_switch</property>
+                <child type="prefix">
+                  <object class="GtkSwitch" id="data_switch">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
                 <child>
                   <object class="GtkButton" id="clear_data_button">
                     <property name="label" translatable="yes">Clear</property>
