--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -74,7 +74,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Clear Personal Data on Close</property>
-                <property name="subtitle" translatable="yes">Cookies and cache data will be deleted when you exit Wike</property>
+                <property name="subtitle" translatable="yes">Cookies and cache data will be deleted</property>
                 <property name="activatable-widget">data_switch</property>
                 <child type="prefix">
                   <object class="GtkSwitch" id="data_switch">
