--- a/data/ui/history-row.ui
+++ b/data/ui/history-row.ui
@@ -9,34 +9,51 @@ SPDX-License-Identifier: GPL-3.0-or-later
   <template class="HistoryRow" parent="GtkListBoxRow">
     <child>
       <object class="GtkBox">
-        <property name="orientation">vertical</property>
         <property name="margin-top">6</property>
         <property name="margin-bottom">6</property>
         <property name="margin-start">3</property>
-        <property name="margin-end">3</property>
-        <property name="spacing">3</property>
-        <child>
-          <object class="GtkLabel" id="title_label">
-            <property name="halign">start</property>
-            <property name="ellipsize">end</property>
-          </object>
-        </child>
+        <property name="spacing">12</property>
         <child>
           <object class="GtkBox">
-            <property name="spacing">6</property>
+            <property name="orientation">vertical</property>
+            <property name="hexpand">true</property>
+            <property name="valign">center</property>
+            <property name="spacing">3</property>
             <child>
-              <object class="GtkLabel" id="time_label">
+              <object class="GtkLabel" id="title_label">
                 <property name="halign">start</property>
-                <property name="use-markup">true</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lang_label">
-                <property name="halign">start</property>
-                <property name="use-markup">true</property>
                 <property name="ellipsize">end</property>
               </object>
             </child>
+            <child>
+              <object class="GtkBox">
+                <property name="spacing">6</property>
+                <child>
+                  <object class="GtkLabel" id="time_label">
+                    <property name="halign">start</property>
+                    <property name="use-markup">true</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="lang_label">
+                    <property name="halign">start</property>
+                    <property name="use-markup">true</property>
+                    <property name="ellipsize">end</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="remove_button">
+            <property name="icon-name">window-close-symbolic</property>
+            <property name="valign">center</property>
+            <style>
+              <class name="flat"/>
+              <class name="circular"/>
+              <class name="bookmarks-remove"/>
+            </style>
           </object>
         </child>
       </object>
