--- a/data/ui/widgets.css
+++ b/data/ui/widgets.css
@@ -89,17 +89,17 @@ SPDX-License-Identifier: GPL-3.0-or-later
   min-height: 28px;
 }
 
-.bookmarks-remove {
+.button-remove {
   min-height: 28px;
   min-width: 28px;
 }
 
-.bookmarks-remove:hover {
+.button-remove:hover {
   color: @destructive_fg_color;
   background-color: @destructive_bg_color;
 }
 
-.bookmarks-remove:active {
+.button-remove:active {
   color: @destructive_fg_color;
   background-color: @destructive_color;
 }
